# embedding_model_server

./: .gitignore  Dockerfile  deploy.sh  download_models.py  main.py  pyproject.toml  test_main.http
