[project]
name = "embedding-model-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Lee Sang Hoon",email = "shpusan001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.53.3,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
